2008-02-03  Aidan Kehoe  <kehoea@parhasard.net>

	* iso8859-1.el (ascii-case-table): 
	Correct the order of the arguments to #'put-case-table-pair. 

2008-01-25  Michael Sperber  <mike@xemacs.org>

	* build-report.el (build-report-version-file-regexp): Adjust to
	handle Mercurial hash.

2008-01-21  Aidan Kehoe  <kehoea@parhasard.net>

	* info.el (Info-suffix-list): 
	Support LZMA compression, as used--oddly--by Mandriva Linux. 

2008-01-17  Mike Sperber  <mike@xemacs.org>

	* files.el (insert-directory): Bind `coding-system-for-read' to
	the `file-name' coding system.  (Previously, the default ended up
	being undecided, which doesn't work well for UTF-8-based locales,
	for example.)

2008-01-16  Aidan Kehoe  <kehoea@parhasard.net>

	* keydefs.el (global-map): 
	Bind '(shift delete) to #'kill-primary-selection, as described by
	Glynn Clements in
	16434.49191.47038.991206@cerise.nosuchdomain.co.uk of 2004-02-08. 

2008-01-14  Jerry James  <james@xemacs.org>

	* font-lock.el (font-lock-add-keywords): Adapt to differences in
	Emacs and XEmacs compiled font-lock lists.
	* font-lock.el (font-lock-remove-keywords): Ditto.
	* font-lock.el (font-lock-set-defaults-1): Make changes specified
	by font-lock-keywords-alist and font-lock-removed-keywords-alist.

2008-01-14  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-output-file-form): 
	Bind print-gensym-alist to nil, as we do within
	byte-compile-output-docform.

2008-01-04  Michael Sperber  <mike@xemacs.org>

        * code-files.el (insert-file-contents):
        (load): Don't call `substitute-in-file-name' on the file name.

2008-01-03  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-edit.el (custom-save-all): 
	If the directory containing the custom file doesn't exist, try to
	create it. Fixes Nick's Crabtree's bug of 
	5fb265820712140145w512fa3bbh355cf76f7e2cf792@mail.gmail.com ;
	thank you Nick.
	* menubar-items.el (default-menubar):
	In the code to edit the user's init file, try to create the